EZ-1343 show latest teacher testing submission

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -1057,7 +1057,7 @@
     <div id="testing-assessment" class="assessment"></div>
     <div class="editor-wrapper">
         <div class="editor-top"></div>
-        <textarea id="testing-submission"></textarea>
+        <textarea id="testing-submission">{{latestSubmission}}</textarea>
     </div>
     <div class="center">
         <button id="testing-submit" class="waves-effect waves-light btn">{{checkLabel}}</button>
