--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -61,6 +61,7 @@
     <!-- Workaround: modals cannot be inside elements that have transforms like sidenav: -->
     <!-- Elements with transforms act as a containing block for fixed position descendants, so position:fixed under something with a transform no longer has fixed behavior. -->
     <ez-dst id="new-course-modal-dst-id"></ez-dst>
+    <ez-dst id="new-exercise-modal-dst-id"></ez-dst>
 
     <!-- New exercise modal -->
     <div id="new-exercise-modal" class="modal">
@@ -119,8 +120,9 @@
         <li id="{{oldParticipantsId}}"><a href="{{oldParticipantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{oldParticipantsLabel}}</a></li>
     {{/isTeacherOrAdmin}}
     {{#isAdmin}}
+        <li><a id="{{newExerciseLinkId}}" class="waves-effect sidenav-close">{{{newExerciseIcon}}}{{newExerciseLabel}}</a></li>
 <!--        <li><a class="waves-effect sidenav-close">{{{addExerciseIcon}}}{{addExerciseLabel}}</a></li>-->
-        <li><a class="waves-effect sidenav-close modal-trigger" href="#new-exercise-modal">{{{newExerciseIcon}}}{{newExerciseLabel}}</a></li>
+
     {{/isAdmin}}
 </script>
 
@@ -455,6 +457,10 @@
         <label for="{{id}}" class="{{#active}}active{{/active}}">{{label}}</label>
         <span id="field-helper-{{id}}" class="helper-text {{#helpText}}has-text{{/helpText}}">{{helpText}}</span>
     </div>
+</script>
+
+<script id="t-c-checkbox" type="text/x-handlebars">
+    <label for="{{id}}"><input id="{{id}}" type="checkbox"><span>{{label}}</span></label>
 </script>
 
 
