EZ-1485 show Lahendus/DevLahendus in anon autoassess embed

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -763,7 +763,7 @@
         <div style="display: flex; align-items: center; justify-content: end; font-size: 1rem;">
             <!-- TODO: svg -->
             <img src="/static/favicon/mstile-70x70.png" style="width: 1.7rem; height: 1.7rem; margin-right: 3px;">
-            Lahendus |<a href="/library/{{exerciseId}}/summary" target="_blank" style="margin-left: 3px; color: #bbb">#{{exerciseId}}</a>
+            {{lahendus}} |<a href="/library/{{exerciseId}}/summary" target="_blank" style="margin-left: 3px; color: #bbb">#{{exerciseId}}</a>
         </div>
     </div>
 </script>
