wui checkbox fix margins so they affect only the checkbox component

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -462,7 +462,12 @@
 </script>
 
 <script id="t-c-checkbox" type="text/x-handlebars">
-    <label for="{{id}}"><input id="{{id}}" type="checkbox"><span>{{label}}</span></label>
+    <ez-checkbox>
+        <label for="{{id}}">
+            <input id="{{id}}" type="checkbox">
+            <span>{{label}}</span>
+        </label>
+    </ez-checkbox>
 </script>
 
 <script id="t-c-radio-buttons" type="text/x-handlebars">
