EZ-1506 fix modals - cannot be inside cq container, now in global ez-modals

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -42,6 +42,7 @@
     <div id="nav-wrap"></div>
 </header>
 <main class="display-none">
+    <ez-modals id="ez-modals"></ez-modals>
     <div id="sidenav-wrap"></div>
     <div class="container">
         <div id="content-container" class="content-container"></div>
