--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -315,7 +315,7 @@
 </script>
 
 <script id="t-c-ezcoll-item" type="text/x-handlebars">
-    <ezc-item id="{{itemId}}" {{#isSelectable}}selectable{{/isSelectable}} class="{{#hasBottomAttrs}}two-rows{{/hasBottomAttrs}} {{#hasActions}}has-actions{{/hasActions}} {{#progressBar}}has-bar{{/progressBar}}">
+    <ezc-item id="{{itemId}}" {{#isSelectable}}selectable{{/isSelectable}} class="{{#hasBottomAttrs}}two-rows{{/hasBottomAttrs}} {{#hasActions}}has-actions{{/hasActions}} {{#progressBar}}has-bar{{/progressBar}} {{#inactive}}inactive{{/inactive}}">
         <ezc-bar-container>
             <ezc-item-container>
                 <ezc-left>
@@ -330,7 +330,10 @@
                 <ezc-main>
                     <ezc-center>
                         <ezc-first>
-                            <ezc-title {{#titleInactive}}class="inactive"{{/titleInactive}}><a {{#titleLink}}href="{{titleLink}}"{{/titleLink}}>{{title}}</a></ezc-title>
+                            <ezc-title>
+                                <a {{#titleLink}}href="{{titleLink}}"{{/titleLink}}>{{title}}</a>
+                                {{#titleIcon}}<ezc-title-icon title="{{titleIconLabel}}">{{{titleIcon}}}</ezc-title-icon>{{/titleIcon}}
+                            </ezc-title>
                             {{#topAttr}}
                                 <ezc-attr class="top" ez-show-min="{{minCollWidth}}">
                                     <ezc-attr-text ez-attr-id="{{id}}" class="{{#isActionable}}actionable{{/isActionable}}" title="{{key}}: {{value}}">{{{shortValueHtml}}}</ezc-attr-text>
@@ -632,6 +635,13 @@
 
 <script id="t-c-stud-course-exercises-item" type="text/x-handlebars">
 
+</script>
+
+<script id="t-c-course-exercises-teacher" type="text/x-handlebars">
+    <div class="title-wrap no-crumb">
+        <h2 class="title">{{title}}</h2>
+    </div>
+    <ez-dst id="{{collDst}}"></ez-dst>
 </script>
 
 
