wui ezcoll progress bar has on-hover title

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -397,7 +397,7 @@
                 {{/hasActions}}
             </ezc-item-container>
             {{#progressBar}}
-                <ezc-progress-bar>
+                <ezc-progress-bar title="{{labelValue}}">
                     <ezc-progress-bar-part style="background-color: var(--ezc-bar-green); flex-grow: {{green}};"></ezc-progress-bar-part>
                     <ezc-progress-bar-part style="background-color: var(--ezc-bar-yellow); flex-grow: {{yellow}};"></ezc-progress-bar-part>
                     <ezc-progress-bar-part style="background-color: var(--ezc-bar-blue); flex-grow: {{blue}};"></ezc-progress-bar-part>
