--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -496,9 +496,15 @@
 <script id="t-c-radio-buttons" type="text/x-handlebars">
     <ez-radio-buttons id="{{elementId}}">
         {{#buttons}}
-            <label for="{{id}}">
+            {{#hasLines}}
+                <ez-radio-line-label>{{label}}</ez-radio-line-label>
+            {{/hasLines}}
+            <label for="{{id}}" class="{{#hasLines}}line{{/hasLines}}">
                 <input id="{{id}}" value="{{id}}" name="{{groupId}}" type="radio" {{#isSelected}}checked{{/isSelected}} {{#isDisabled}}disabled="disabled"{{/isDisabled}}>
-                <span>{{label}}</span>
+                    <span>
+                        {{^hasLines}}{{label}}{{/hasLines}}
+                        {{#hasLines}}<ez-radio-line></ez-radio-line>{{/hasLines}}
+                    </span>
             </label>
         {{/buttons}}
         <span id="field-helper-{{elementId}}" class="helper-text"></span>
@@ -642,6 +648,7 @@
         <h2 class="title">{{title}}</h2>
     </div>
     <ez-dst id="{{collDst}}"></ez-dst>
+    <ez-dst id="{{reorderModalDst}}"></ez-dst>
 </script>
 
 
